--- a/app/views/production/_production_chain_operation.html.haml
+++ b/app/views/production/_production_chain_operation.html.haml
@@ -24,7 +24,9 @@
                 .cell.new=link_to tl(:new), :action=>:production_chain_conveyor_create, :production_chain_id=>operation.production_chain_id, :target_id=>operation.id
               %td.rail
               %td.arrow
-      %td.operation.master=link_to operation.name, :action=>:production_chain_operation_update, :id=>operation.id
+      %td.operation.master
+        =link_to operation.name, :action=>:production_chain_operation_update, :id=>operation.id
+        .action=link_to tl(:play), {:action=>:production_chain_play, :id=>operation.production_chain_id, :operation_id=>operation.id}, :class=>"icon im-play"
       %td.conveyors.output-conveyors
         -for conveyor in oc
           %table.conveyor
