--- a/app/views/production/land_parcels.html.haml
+++ b/app/views/production/land_parcels.html.haml
@@ -8,4 +8,28 @@
 
 =toolbar do
   -link :land_parcel_create
+
+-for group in @current_company.land_parcel_groups
+  .group
+    %h2=group.name
+    -total_area = group.area
+    %table.treemap
+      %tr
+        -for land_parcel in group.land_parcels_on(session[:viewed_on])
+          %td.plot{:style=>"width: #{land_parcel.area/total_area}%;", :class=>cycle("odd", "even")}
+            .bmenu
+              =link_to(land_parcel.name, {:action=>:land_parcel, :id=>land_parcel.id}, :class=>:name)
+              %ul
+                %li=link_to(::I18n.t("actions.production.operation_create"), {:action=>:operation_create, :target_id=>land_parcel.id, :planned_on=>session[:viewed_on]}, :class=>"icon im-create")
+                %li=link_to(tl(:divide), {:action=>:land_parcel_divide, :id=>land_parcel.id}, :class=>"icon im-divide")
+                %li=link_to(tl(:update), {:action=>:land_parcel_update, :id=>land_parcel.id}, :class=>"icon im-update")
+                %li=link_to(tl(:delete), {:action=>:land_parcel_delete, :id=>land_parcel.id}, :method=>:delete, :confirm=>:are_you_sure_you_want_to_delete, :class=>"icon im-delete")
+            .area=tl(:x_unit, :quantity=>land_parcel.area_measure, :unit=>land_parcel.area_unit.name)
+            .desc=land_parcel.description
+            %ul.operations
+              -for operation in land_parcel.operations_on(session[:viewed_on])
+                %li=link_to(operation.name, {:action=>:operation, :id=>operation.id})
+
+%h2=tl(:list)
 =dyta :land_parcels
+
