Add concept of token in production for the tracking
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1653 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/production/_production_chain_conveyor_form.html.haml
+++ b/app/views/production/_production_chain_conveyor_form.html.haml
@@ -6,8 +6,7 @@
   -f.field :production_chain_conveyor, :comment, :field=>:textarea
   -f.title :product
   -f.field :production_chain_conveyor, :product_id, :choices=>{:reflection=>:products}, :new=>{:controller=>:management, :action=>:product_create}
-  -f.field :production_chain_conveyor, :check_on_input
-  -f.field :production_chain_conveyor, :check_on_output
+  -f.field :production_chain_conveyor, :check_state
   -f.field :production_chain_conveyor, :flow
   -f.title :source
   -f.field :production_chain_conveyor, :source_id, :choices=>{:reflection=>:production_chain_operations, :include_blank=>""}, :new=>{:action=>:production_chain_operation_create, :production_chain_id=>@production_chain_conveyor.production_chain_id}
