--- a/app/views/production/_production_chain_conveyor_form.html.haml
+++ b/app/views/production/_production_chain_conveyor_form.html.haml
@@ -11,6 +11,7 @@
   -f.title :source
   -f.field :production_chain_conveyor, :source_id, :choices=>{:reflection=>:production_chain_operations, :include_blank=>""}, :new=>{:action=>:production_chain_operation_create, :production_chain_id=>@production_chain_conveyor.production_chain_id}
   -f.field :production_chain_conveyor, :source_quantity
+  -f.field :production_chain_conveyor, :unique_tracking
   -f.title :target
   -f.field :production_chain_conveyor, :target_id, :choices=>{:reflection=>:production_chain_operations, :include_blank=>""}, :new=>{:action=>:production_chain_operation_create, :production_chain_id=>@production_chain_conveyor.production_chain_id}
   -f.field :production_chain_conveyor, :target_quantity
