Add accounts load and add fixtures
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1655 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/accounts.html.haml
+++ b/app/views/accountancy/accounts.html.haml
@@ -1,5 +1,6 @@
 =toolbar do
   -link :account_create
+  -link :accounts_load
 
 .search
   =form_tag(:action=>:accounts, :prefix=>params[:prefix]) do
