--- a/app/views/accountancy/_tax_form.html.haml
+++ b/app/views/accountancy/_tax_form.html.haml
@@ -7,7 +7,7 @@
     -f.field Tax.human_attribute_name('nature'), @tax.nature_label
     -f.field Tax.human_attribute_name('amount'), @tax.amount.to_s
   -f.field :tax, :name
-  -f.field :tax, :account_collected_id, :choices=>:account_collected, :resize=>true, :new=>{:action=>:account_create, :number=>preference("accountancy.accounts.taxes_collected").value}
-  -f.field :tax, :account_paid_id, :choices=>:account_paid, :resize=>true, :new=>{:action=>:account_create, :number=>preference("accountancy.accounts.taxes_paid").value}
+  -f.field :tax, :collected_account_id, :choices=>:collected_account, :resize=>true, :new=>{:action=>:account_create, :number=>preference("accountancy.accounts.taxes_collected").value}
+  -f.field :tax, :paid_account_id, :choices=>:paid_account, :resize=>true, :new=>{:action=>:account_create, :number=>preference("accountancy.accounts.taxes_paid").value}
   -f.field :tax, :included
   -f.field :tax, :reductible
