--- a/app/views/production/_production_chain_conveyor.html.haml
+++ b/app/views/production/_production_chain_conveyor.html.haml
@@ -11,8 +11,8 @@
           =link_to(conveyor.product.name, :action=>:production_chain_conveyor_update, :id=>conveyor.id)
           %ul 
             %li=tl(:x_unit_per_second, :quantity=>conveyor.flow, :unit=>conveyor.unit.readable_name)
-            %li=link_to(tl(:update), {:action=>:production_chain_conveyor_update, :id=>conveyor.id}, :class=>"icon im-update")
-            %li=link_to(tl(:delete), {:action=>:production_chain_conveyor_delete, :id=>conveyor.id}, :confirm=>tl(:are_you_sure_you_want_to_delete), :method=>:delete, :class=>"icon im-delete")
+            =li_link_to(tl(:update), {:action=>:production_chain_conveyor_update, :id=>conveyor.id}, :class=>"icon im-update")
+            =li_link_to(tl(:delete), {:action=>:production_chain_conveyor_delete, :id=>conveyor.id}, :confirm=>tl(:are_you_sure_you_want_to_delete), :method=>:delete, :class=>"icon im-delete")
 %td.rail
 %td.arrow
 -unless conveyor.target_quantity.zero?
