--- a/app/views/production/production_chain.html.haml
+++ b/app/views/production/production_chain.html.haml
@@ -3,7 +3,7 @@
   =toolbar do |t|
     -t.update @production_chain
     -t.link :production_chain_operation_create, :production_chain_id=>@production_chain.id
-    -t.play @production_chain
+    -t.link :production_chain_operation_create, :production_chain_id=>@production_chain.id
 
   -#=list_evalue(3) do |l|
   -#  -l.evalue @production_chain, :name
