Finishes to set up numbers and reference numbers. Begins to work on auto-relogin on expired sessions
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1656 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/authentication/login.html.haml
+++ b/app/views/authentication/login.html.haml
@@ -46,12 +46,12 @@
 -else
   #nojavascript.login
     .logoban
-    .message=tc('no_javascript')
+    %p.message=tc('no_javascript')
   :javascript
-    $('nojavascript').hide();
-    $('login').show();
+    window.$('nojavascript').hide();
+    window.$('login').show();
 
 :javascript
-  $('name').select();
-  $('name').focus(); 
+  window.$('name').select();
+  window.$('name').focus(); 
 
