--- a/app/views/management/_purchase_order.html.haml
+++ b/app/views/management/_purchase_order.html.haml
@@ -6,5 +6,6 @@
 
 =evalue @purchase_order, :supplier, :label=>:full_name, :url=>{:controller=>:relations, :action=>:entity}
 =evalue @purchase_order, :planned_on
+=evalue @purchase_order, :reference_number
 =evalue @purchase_order, :comment
 =evalue @purchase_order, :dest_contact, :label=>:address
