--- a/app/views/management/_purchase_order_form.html.haml
+++ b/app/views/management/_purchase_order_form.html.haml
@@ -7,6 +7,7 @@
     -f.field :purchase_order, :supplier_id, :choices=>:suppliers, :new=>{:controller=>:relations, :action=>:entity_create}
     -f.field :purchase_order, :dest_contact_id, :choices=>{:reflection=>:self_contacts, :label=>:address}, :new=>{:controller=>:relations, :action=>:contact_create, :entity_id=>@current_company.entity_id}
     -f.field :purchase_order, :planned_on
+    -f.field :purchase_order, :reference_number
   -f.field :purchase_order, :comment, :field=>:textarea
 
 
