--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,9 @@
     =javascript_include_tag :defaults
     =javascript_include_tag "dyke"
   %body
-    #body.flex{:class=>("resizable" if resizable?)}
+    -expiration = {}
+    -# expiration = {"timeout"=>session[:expiration], "timeout-href"=>url_for(:controller=>:authentication, :action=>:relogin, :name=>@current_user.name)} if @current_user and session[:expiration].to_i>0
+    #body.flex{expiration, :class=>("resizable" if resizable?)}
       #top=top_tag
       #wrap.wrap.hbox.flex
         #side.side.anchor-left{:style=>("display:none;" unless session[:side])}=side_tag
