--- a/app/views/management/_transport_form.html.haml
+++ b/app/views/management/_transport_form.html.haml
@@ -2,6 +2,7 @@
   -f.error :transport
   -f.title :general
   -f.field :transport, :transporter_id, :choices=>{:reflection=>:transporters}, :new=>{:controller=>:relations, :action=>:entity_create, :transporter=>1}
-  -f.field :transport, :responsible_id, :choices=>{:reflection=>:employees, :include_blank=>"-- Aucun --"}, :new=>{:controller=>:company, :action=>:user_create, :employed=>1}
+  -f.field :transport, :responsible_id, :choices=>{:reflection=>:employees, :include_blank=>""}, :new=>{:controller=>:company, :action=>:user_create, :employed=>1}
+  -f.field :transport, :reference_number
   -f.field :transport, :transport_on
   -f.field :transport, :comment, :field=>:textarea
