--- a/app/views/management/purchase_order.html.haml
+++ b/app/views/management/purchase_order.html.haml
@@ -4,17 +4,20 @@
   -t.print :purchase_order, :id=>@purchase_order.id
 
 %h2= tc 'general_informations'
-%table
-  %tr
-    %td
-      =evalue @purchase_order, :supplier, :label=>:full_name, :url=>{:controller=>:relations, :action=>:entity}
-      =evalue @purchase_order, :planned_on
-      =evalue @purchase_order, :comment
-    %td
-      =evalue @purchase_order, :dest_contact, :label=>:address
-      =evalue @purchase_order, :shipped
+
+=list_evalue(3) do |l|
+  -l.evalue @purchase_order, :supplier, :label=>:full_name, :url=>{:controller=>:relations, :action=>:entity}
+  -l.evalue @purchase_order, :planned_on
+  -l.evalue @purchase_order, :number
+  -l.evalue @purchase_order, :reference_number
+  -l.evalue @purchase_order, :comment
+  -l.evalue @purchase_order, :dest_contact, :label=>:address
+  -l.evalue @purchase_order, :shipped
 
 %h2=tc :purchase_order_lines
+=toolbar do |t|
+  -t.link(:purchase_order_line_create, :order_id=>@purchase_order.id)if @purchase_order.updatable?
+  
 =dyta :purchase_order_lines
 
 -if @purchase_order.payment_parts.count > 0
