--- a/public/themes/tekyla/stylesheets/screen.css
+++ b/public/themes/tekyla/stylesheets/screen.css
@@ -94,8 +94,8 @@ body { background: #C9D7F1; }
 
 #legals { text-align: center; color: #047; font-size: 11px; padding: 4px; }
 
-.dialog {  background: #C9D7F1; }
-.dialog .wrap { border: 8px solid #95b0e4; }
+.dialog {  background: #C9D7F1; box-shadow: 0px 0px 12px #555; -moz-box-shadow: 0px 0px 12px #555; -webkit-box-shadow: 0px 0px 12px #555;}
+.dialog .wrap { border: 4px solid #95b0e4; }
 .dialog .main { border-top: 1px solid #95b0e4; padding: 0 8px 8px 8px; }
 .fields { background: url(../images/shadow-top.png) repeat-x bottom; overflow: auto; }
 
@@ -406,8 +406,8 @@ h2.form { font-size: 15px; margin: 8px 0px 4px; border-bottom: 1px solid #C9D7F1
 
 
 
-.login { width:512px; border: 1px solid #95b0e4; margin:64px auto; background:#c9d7f1; z-index: 1000; }
-.dialog .login { margin: 32px auto; }
+.login { width:500px; border: 1px solid #95b0e4; margin:64px auto; background:#c9d7f1; z-index: 1000; }
+.dialog .login { margin: 0; border-width: 4px; padding: 0 8px;}
 .login .logoban { height:80px; background: url(../../../images/ekylong.png) no-repeat center; margin: 16px 16px 8px; }
 .login h2 { color:red !important; padding: 2px; text-align:center; font-size:18px; }
 .login p { margin:8px; }
