--- a/app/views/authentication/register.html.haml
+++ b/app/views/authentication/register.html.haml
@@ -16,7 +16,7 @@
       %table.formalize
         %tr.field
           %td.label=tc(:load_demo_data)
-          %td.input=check_box_tag(:demo, :load_data, :checked=>true)
+          %td.input=check_box_tag(:demo, params[:locale]||::I18n.default_locale, :checked=>true)
     .actions
       -if defined?(Ekylibre::DONT_REGISTER)
         =text_field_tag :register_password
