--- a/app/views/production/_production_chain_work_center_inputs.html.haml
+++ b/app/views/production/_production_chain_work_center_inputs.html.haml
@@ -1,5 +1,5 @@
--operation = production_chain_operation_inputs
--if operation
+-work_center = production_chain_work_center_inputs
+-if work_center
   %table.dyta.formalize
     %thead
       %tr
@@ -7,7 +7,7 @@
         %th=OperationLine.human_attribute_name("quantity")
         %th=OperationLine.human_attribute_name("unit")
         %th=OperationLine.human_attribute_name("stock")
-    -for conveyor in operation.input_conveyors
+    -for conveyor in work_center.input_conveyors
       -style_class = cycle("odd", "even")
       %tr{:class=>style_class}
         %td=conveyor.product.name
